<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    style="@style/RoundedSquare"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/github_darker"
    tools:ignore="Overdraw">

    <Button
        android:id="@+id/btnShare"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/detail_icon_btn_desc"
        app:icon="@drawable/baseline_share_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/github_green"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/img_avatar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_username"
        android:textAlignment="center"
        android:textColor="@color/white_grayish"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        tools:text="@string/user" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:textColor="@color/white_grayish"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_static_followers"
            app:layout_constraintStart_toStartOf="@+id/linear"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:ignore="RtlSymmetry"
            tools:text="@string/number" />

        <TextView
            android:id="@+id/tv_static_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textAlignment="center"
            android:textColor="@color/white_grayish"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_following"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"
            android:paddingEnd="5dp"
            android:textAlignment="center"
            android:textColor="@color/white_grayish"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_static_following"
            app:layout_constraintStart_toEndOf="@+id/tv_static_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/number" />

        <TextView
            android:id="@+id/tv_static_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textAlignment="center"
            android:textColor="@color/white_grayish"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/linear"
            app:layout_constraintStart_toEndOf="@+id/tv_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>